--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@ai-sdk/openai": "^3.0.2",
+    "@modelcontextprotocol/sdk": "^1.25.1",
     "ai": "^6.0.5",
     "ai-sdk-ollama": "^3.0.1",
     "dotenv": "^17.2.3",
