feat: add Mem0 and Vercel AI SDK integration example with OSS support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=your_api_key_here
 ZHIPU_API_KEY=your_zhipu_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
+MEM0_API_KEY=m0-xxx
