--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,49 @@
-node_modules
-.env
+# OS
 .DS_Store
-dist
-*.log
+Thumbs.db
+*.swp
+*.swo
+
+# Environment / Secrets
+.env
+.env.*
+!.env.example
+
+# Node.js
+node_modules/
+dist/
+run.log
+run_debug*.log
+coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.next/
+.turbo/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+.venv/
+env/
+ENV/
+.pytest_cache/
+.mypy_cache/
+.coverage
+htmlcov/
+.python-version
+
+# IDE / Editors
+.vscode/
+.idea/
+
+# AI / Data / Local State
+*.db
+*.sqlite
+.cache/
+# Local chat memory and state
+**/data/*.json
+!**/data/*.example.json
