feat: add Google Vertex AI (Gemini) support and showcase demo

--- a/py-pydantic-lab/.env.example
+++ b/py-pydantic-lab/.env.example
@@ -1,6 +1,11 @@
 # --- LLM Provider Configuration ---
-# Options: deepseek, openai, ollama, or custom
+# Options: deepseek, openai, ollama, azure_ad, gemini_vertex, or custom
 LLM_PROVIDER=deepseek
+
+# --- Google Vertex AI Configuration ---
+GOOGLE_PROJECT_ID=your_gcp_project_id_here
+GOOGLE_LOCATION=us-central1
+GOOGLE_MODEL_NAME=gemini-1.5-pro
 
 # --- DeepSeek Configuration ---
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
