feat: add optional proxy support for all LLM providers

--- a/py-pydantic-lab/.env.example
+++ b/py-pydantic-lab/.env.example
@@ -25,3 +25,7 @@ OLLAMA_BASE_URL=http://localhost:11434/v1
 
 # --- Observability ---
 # LOGFIRE_TOKEN=your_logfire_token_here
+
+# --- Corporate Network / Proxy Configuration (Optional) ---
+# If you are behind a corporate firewall, uncomment and set the proxy URL
+# LLM_PROXY_URL=http://your-proxy-server:port
