feat: integrate MCP servers for Context7, WeChat Reading, and AMap Maps
- Added 4-mcp-context7.py for technical documentation RAG
- Added 5-mcp-weread.py for personal knowledge management (PKM) with analysis query
- Added 6-mcp-amap.py for location intelligence and weather services
- Created WEREAD_ANALYSIS_IDEAS.md with deep analysis concepts and architecture patterns
- Updated .env.example with new MCP configuration placeholders
- Updated LEARNING_GUIDE.md to include new intermediate MCP examples
- Synchronized requirements.txt with mcp and anyio dependencies

--- a/py-pydantic-lab/.env.example
+++ b/py-pydantic-lab/.env.example
@@ -29,3 +29,16 @@ OLLAMA_BASE_URL=http://localhost:11434/v1
 # --- Corporate Network / Proxy Configuration (Optional) ---
 # If you are behind a corporate firewall, uncomment and set the proxy URL
 # LLM_PROXY_URL=http://your-proxy-server:port
+
+# --- MCP: WeChat Reading (Weread) ---
+# Get cookie from weread.qq.com (Headers -> Cookie)
+WEREAD_COOKIE=your_weread_cookie_here
+# Or use CookieCloud (Optional)
+# CC_URL=https://cc.chenge.ink
+# CC_ID=your_uuid
+# CC_PASSWORD=your_password
+
+# --- MCP: AMap Maps ---
+# Get API Key from https://lbs.amap.com/ (Web Service Type)
+AMAP_MAPS_API_KEY=your_amap_api_key_here
+
