--- a/py-pydantic-lab/.env.example
+++ b/py-pydantic-lab/.env.example
@@ -42,3 +42,7 @@ WEREAD_COOKIE=your_weread_cookie_here
 # Get API Key from https://lbs.amap.com/ (Web Service Type)
 AMAP_MAPS_API_KEY=your_amap_api_key_here
 
+# --- MCP: Weather (with Historical Data) ---
+# npx -y @dangahagan/weather-mcp
+# No API key required for basic Open-Meteo usage
+
