refactor: keep only openweathermap for weather examples
- Deleted 7-mcp-weather-history.py (Open-Meteo)
- Deleted 8-mcp-weather-visualcrossing.py (Visual Crossing)
- Cleaned up .env.example and LEARNING_GUIDE.md

--- a/py-pydantic-lab/.env.example
+++ b/py-pydantic-lab/.env.example
@@ -42,7 +42,8 @@ WEREAD_COOKIE=your_weread_cookie_here
 # Get API Key from https://lbs.amap.com/ (Web Service Type)
 AMAP_MAPS_API_KEY=your_amap_api_key_here
 
-# --- MCP: Weather (with Historical Data) ---
-# npx -y @dangahagan/weather-mcp
-# No API key required for basic Open-Meteo usage
+# --- MCP: OpenWeatherMap ---
+# npx -y mcp-openweathermap
+# Get API Key from https://openweathermap.org/api
+OPENWEATHER_API_KEY=your_openweather_api_key_here
 
