feat(python): add run.sh helper script, update documentation, and refine MCP examples

--- a/py-pydantic-lab/.env.example
+++ b/py-pydantic-lab/.env.example
@@ -47,3 +47,11 @@ AMAP_MAPS_API_KEY=your_amap_api_key_here
 # Get API Key from https://openweathermap.org/api
 OPENWEATHER_API_KEY=your_openweather_api_key_here
 
+
+
+OPENAI_API_KEY=your_api_key_here
+ZHIPU_API_KEY=your_api_key_here
+ZHIPU_BASE_URL=https://open.bigmodel.cn/api/paas/v4/
+ZHIPU_MODEL_NAME=glm-4.6v
+DEEPSEEK_API_KEY=your_api_key_here
+MEM0_API_KEY=your_mem0_api_key_here
